// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio should match snapshot with hint text supplied 1`] = `
<Fragment>
  <div
    className="radio"
  >
    <input
      className="radio__input"
      disabled={false}
      id="radio-group_yes"
      name="radio-group"
      type="radio"
    />
    <label
      className="radio__label"
      htmlFor="radio-group_yes"
    >
      Yes, please.
    </label>
    <span
      className="checkbox__hint"
    >
      This is a hint to appear.
    </span>
  </div>
</Fragment>
`;

exports[`Radio should match snapshot with some default attributes 1`] = `
<Fragment>
  <div
    className="radio"
  >
    <input
      className="radio__input"
      disabled={false}
      id="radio-group_yes"
      name="radio-group"
      type="radio"
    />
    <label
      className="radio__label"
      htmlFor="radio-group_yes"
    >
      Yes, please.
    </label>
  </div>
</Fragment>
`;
